--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -23,7 +23,7 @@ jobs:
         run: sudo apt update  && sudo apt install sudo -y
 
       - name: Install Maven
-        run: cd Banking-System-Back && sudo apt update  && sudo apt install maven -y
+        run: cd calculator && sudo apt update  && sudo apt install maven -y
 
       - name: Resolve Back
         run: cd calculator && mvn install
